# Timely

./: README.md
code/: CMakeLists.txt  resources.qrc
code/.qtcreator/: CMakeLists.txt.user.1355fd7
code/app/: CMakeLists.txt  main.cpp
code/core/: CMakeLists.txt  DateRange.cpp  DateRange.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  IStorage.h  IdGenerator.h  JsonStorage.cpp  JsonStorage.h  TextQuery.h  Validate.h
code/test/unit_tests/: tst_event_manager.cpp  unit_tests.pro
code/ui/: CMakeLists.txt  eventdialog.cpp  eventdialog.h  eventdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  reminderservice.cpp  reminderservice.h  searchwindow.cpp  searchwindow.h  searchwindow.ui
tests/test/unit_tests/: CMakeLists.txt  tst_validate.cpp
